--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,13 @@ body {
     display:grid;
     /* grid-template-rows: 1fr 6fr;
     grid-template-columns: 6fr 1fr; */
-    grid-template-areas: "search add "
-                         "table   table ";
+    grid-template-areas: "search  add "
+                         "table   table "
+                         "pop-up  pop-up";
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.add, table, .search {
+.add, table, .search, .pop-up {
     margin-block-start: 3%;
     place-self: center;
 }
@@ -38,7 +39,6 @@ table {
 tr {
     height: 2em;
     width: max-content;
-    /* border: 1px solid lightgrey; */
 }
 
 
@@ -89,7 +89,15 @@ tr:nth-child(3) {
 
 img {
     height: 10em;
-  
-  
 }
 
+.hidden {
+    display:none;
+}
+
+.pop-up{
+    grid-area: pop-up;
+    background-color: rgba(180, 156, 156, 0.443);
+    padding-inline: 0.5em;
+    border-radius: 20%;  
+}
