--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,12 @@
 }
 
 body {
-    /* height: 50vh; */
+    height: 100vh;
     display:grid;
-    /* grid-template-rows: 1fr 6fr;
-    grid-template-columns: 6fr 1fr; */
     grid-template-areas: "search  add "
                          "table   table "
-                         "pop-up  pop-up";
+                         "pop-up  pop-up"
+                         "footer footer";
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -100,4 +99,13 @@ img {
     background-color: rgba(180, 156, 156, 0.443);
     padding-inline: 0.5em;
     border-radius: 20%;  
+}
+
+footer {
+    grid-area: footer;
+    place-self: center;
+    background-color: rgba(180, 156, 156, 0.443);
+    border-radius: 20%;  
+    width: 15em;
+    padding-inline: 1em;
 }
