--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,6 @@ table {
     background-color: rgb(191, 191, 191);
 }
 
-.header{
-  font-weight: bold; 
-  background-color: lightgrey;
-}
 
 tr {
     height: 2em;
@@ -45,9 +41,15 @@ tr:nth-child(even) {
     background-color: white;
 }
 
-tr:nth-child(3) {
+tr:nth-child(odd) {
     background-color: rgb(226, 225, 225);
 }
+
+tr:first-child {
+    font-weight: bold; 
+    background-color: lightgrey;
+}
+
 
 .col1, .col2, .col3 {
     padding-inline-start: 2%;
@@ -59,6 +61,10 @@ tr:nth-child(3) {
 
 .col2 {
     width: 4em;
+}
+
+.col3 {
+    width: 13em;
 }
 
 .btns {
