--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 body {
     height: 90vh;
     display:grid;
+    grid-template-rows: 1fr 6fr 1fr;
     grid-template-areas: "search  add "
                          "table   table "
                          "pop-up  pop-up"
@@ -110,12 +111,11 @@ img {
 }
 
 footer {
-    margin-inline: 5em;
     grid-area: footer;
+   
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    
+
     background-color: rgba(180, 156, 156, 0.443); 
-    height:fit-content;
 }
