--- a/css/style.css
+++ b/css/style.css
@@ -4,21 +4,35 @@
 
 body {
     background-color: antiquewhite;
-    height: 90vh;
+    height: 95vh;
     display:grid;
     grid-template-rows: 1fr 6fr 1fr;
-    grid-template-areas: "filter add"
-                         "table   table "
-                         "pop-up  pop-up"
+    grid-template-columns: 6fr 1fr;
+    grid-template-areas: "filter filter"
+                         "table add"
                          "footer footer";
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .filter {
     grid-area: filter;
+    background-color: rgba(180, 156, 156, 0.443); 
+    
 }
 
-.add, table, .search, .pop-up {
+fieldset {
+    display: flex;
+	align-items: center;
+	justify-content: space-between;
+
+}
+
+.book-list {
+    width: 10em;
+    
+}
+
+.add, table, .pop-up {
     margin-block-start: 3%;
     place-self: center;
 }
@@ -107,9 +121,8 @@ img {
 }
 
 .pop-up{
-    grid-area: pop-up;
     position:absolute;
-    top: 4em;
+    top: 8em;
     background-color: rgba(180, 156, 156, 0.443);
     padding-inline: 0.5em;
     border-radius: 20%;  
@@ -123,4 +136,5 @@ footer {
     justify-content: space-evenly;
 
     background-color: rgba(180, 156, 156, 0.443); 
+    height: fit-content;
 }
