--- a/css/style.css
+++ b/css/style.css
@@ -135,3 +135,17 @@ footer {
     background-color: rgba(180, 156, 156, 0.443); 
     height: fit-content;
 }
+
+.book-edit-modal form {
+    background-color: rgba(239, 183, 110, 0.567);
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+   
+}
+
+.book-title, .book-price, .actions {
+    margin-block: 2%;
+}
+
