--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ img {
 .pop-up{
     position:absolute;
     top: 8em;
-    background-color: rgba(180, 156, 156, 0.443);
+    background-color: rgb(234, 215, 137);
     padding-inline: 0.5em;
     border-radius: 20%;  
 }
