--- a/css/style.css
+++ b/css/style.css
@@ -5,48 +5,22 @@
 body {
     background-color: antiquewhite;
     height: 95vh;
-    display:grid;
-    grid-template-rows: 1fr 6fr 1fr;
-    grid-template-columns: 6fr 1fr;
-    grid-template-areas: "filter filter"
-                         "table add"
-                         "footer footer";
     font-family: Arial, Helvetica, sans-serif;
-}
-
-.filter {
-    grid-area: filter;
-    background-color: rgba(180, 156, 156, 0.443); 
-    
-}
-
-.filter-and-sort {
-    display:flex;
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
-.book-list, .sort-by select {
-    width: 10em;
-}
-
-.add, table, .pop-up {
+.table, .pop-up {
     margin-block-start: 3%;
-    place-self: center;
 }
-
-.search {
-    grid-area: search;
-}
-
-.add {
-    grid-area: add;
+.add{
+    place-self: end;
 }
 
 table {
-    grid-area: table;
     background-color: rgb(191, 191, 191);
 }
-
 
 thead {
     font-weight: bold;
@@ -58,7 +32,6 @@ tr {
     width: max-content;
 }
 
-
 tbody tr:nth-child(even) {
     background-color: white;
 }
@@ -67,12 +40,11 @@ tbody tr:nth-child(odd) {
     background-color: rgb(226, 225, 225);
 }
 
-
-.col1, .col2, .col3 {
+.col1, .col2, .col3, .col4 {
     padding-inline-start: 2%;
 }
 
-.col1 {
+.col1, .col4 {
     width: 13em;
 }
 
@@ -80,14 +52,9 @@ tbody tr:nth-child(odd) {
     width: 4em;
 }
 
-.col3 {
-    width: 13em;
-}
-
 .btns {
     font-weight: bold;
     text-align: center;
-    width: 13em;
 }
 
 .read, .update, .delete {
@@ -109,6 +76,27 @@ tbody tr:nth-child(odd) {
     background-color: orange;
 }
 
+
+.filter {
+    background-color: rgba(180, 156, 156, 0.443); 
+}
+
+.filter-and-sort {
+    display:flex;
+    justify-content: space-between;
+}
+
+.book-list, .sort-by select {
+    width: 10em;
+}
+
+.search {
+    grid-area: search;
+}
+
+
+
+
 img {
     height: 10em;
 }
@@ -126,7 +114,8 @@ img {
 }
 
 footer {
-    grid-area: footer;
+    /* grid-area: footer; */
+    
    
     display: flex;
     flex-direction: row;
