--- a/css/style.css
+++ b/css/style.css
@@ -151,3 +151,7 @@ footer {
     display: flex;
     justify-content: space-between;
 }
+
+.actions btn:nth-child(2){
+    justify-self: flex-end;
+}
